// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`basic base. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`basic destroyInactiveTab. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:40%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(-200%, 0px, 0px);-webkit-transform:translate3d(-200%, 0px, 0px);-moz-transform:translate3d(-200%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        tab 3
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`basic inital tab. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:20%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(-100%, 0px, 0px);-webkit-transform:translate3d(-100%, 0px, 0px);-moz-transform:translate3d(-100%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        tab 3
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`basic no animation. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap"
    style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`basic prerenderingSiblingsNumber. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`basic renderTabBar renderTab. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          <div>
            t1
          </div>
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          <div
            style="position:relative;"
          >
            t2
            <div
              style="position:absolute;right:-3px;top:-1px;width:6px;height:6px;background:red;border-top-left-radius:6px;border-bottom-left-radius:6px;border-bottom-right-radius:6px;border-top-right-radius:6px;"
            />
          </div>
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          <div>
            t3
          </div>
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          <div>
            t4
          </div>
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          <div>
            t5
          </div>
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`basic tabBarPosition. 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-bottom"
>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-bottom"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
</div>
`;

exports[`basic vertical. 1`] = `
<div
  class="rmc-tabs rmc-tabs-vertical rmc-tabs-tabbar-left"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-left"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="height:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="height:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="height:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="height:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="height:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="height:20%;top:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-x;transform:translate3d(0px, 0%, 0px);-webkit-transform:translate3d(0px, 0%, 0px);-moz-transform:translate3d(0px, 0%, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 1 4
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div
        style="background:#ADFFD7;"
      >
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 1
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 2
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 3
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 4
        </p>
        <p
          style="margin:0;padding:10px;"
        >
          tab 2 5
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`single content. base 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div>
        <p>
          single content
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div>
        <p>
          single content
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;

exports[`single content. function 1`] = `
<div
  class="rmc-tabs rmc-tabs-horizontal rmc-tabs-tabbar-top"
>
  <div
    class="rmc-tabs-tab-bar-wrap"
  >
    <div
      class="rmc-tabs-tab-bar rmc-tabs-tab-bar-animated rmc-tabs-tab-bar-top"
      style="background-color:#fff;"
    >
      <div
        class="rmc-tabs-tab-bar-content"
        style="touch-action:pan-x pan-y;"
      >
        <div
          class="rmc-tabs-tab-bar-tab rmc-tabs-tab-bar-tab-active"
          style="width:20%;"
        >
          t1
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t2
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t3
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t4
        </div>
        <div
          class="rmc-tabs-tab-bar-tab"
          style="width:20%;"
        >
          t5
        </div>
        <div
          class="rmc-tabs-tab-bar-underline"
          style="width:20%;left:0%;"
        />
      </div>
    </div>
  </div>
  <div
    class="rmc-tabs-content-wrap rmc-tabs-content-wrap-animated"
    style="touch-action:pan-y;transform:translate3d(0%, 0px, 0px);-webkit-transform:translate3d(0%, 0px, 0px);-moz-transform:translate3d(0%, 0px, 0px);"
  >
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-active"
    >
      <div>
        <p>
          single content
        </p>
        <p>
          {"index":0,"tab":{"title":"t1"}}
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    >
      <div>
        <p>
          single content
        </p>
        <p>
          {"index":1,"tab":{"title":"t2"}}
        </p>
      </div>
    </div>
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
    <div
      class="rmc-tabs-pane-wrap rmc-tabs-pane-wrap-inactive"
    />
  </div>
</div>
`;
